Added API to update user product state and send updated notification mail and event